# embody

./: .gitignore
arm/upper_computer/backend/embodied_arm_ws/src/arm_esp32_gateway/: package.xml  setup.py
arm/upper_computer/backend/embodied_arm_ws/src/arm_esp32_gateway/arm_esp32_gateway/: __init__.py
arm/upper_computer/backend/embodied_arm_ws/src/arm_hardware_interface/: CMakeLists.txt  arm_hardware_interface_plugins.xml  package.xml
arm/upper_computer/backend/embodied_arm_ws/src/arm_lifecycle_manager/: package.xml
arm/upper_computer/backend/embodied_arm_ws/src/arm_lifecycle_manager/arm_lifecycle_manager/: bringup_status.py  managed_lifecycle_manager_node.py  runtime_supervisor_node.py
arm/upper_computer/backend/embodied_arm_ws/src/arm_lifecycle_manager/resource/: arm_lifecycle_manager
arm/upper_computer/backend/embodied_arm_ws/src/arm_motion_planner/: package.xml
arm/upper_computer/backend/embodied_arm_ws/src/arm_motion_planner/arm_motion_planner/: __init__.py  backend_factory.py  motion_planner_node.py  planner.py  planning_pipeline.py  providers.py
arm/upper_computer/backend/embodied_arm_ws/src/arm_safety_supervisor/: package.xml  setup.cfg
arm/upper_computer/backend/embodied_arm_ws/src/arm_task_orchestrator/: package.xml
arm/upper_computer/backend/embodied_arm_ws/src/arm_task_orchestrator/arm_bt_trees/: pick_place.yaml
arm/upper_computer/backend/embodied_arm_ws/src/arm_task_orchestrator/arm_task_orchestrator/: application_service.py  node_actions.py  node_publishers.py  orchestrator.py  orchestrator_node.py  recovery_policy.py  runtime.py  stack_factory.py  state_machine.py  summary_publisher.py  task_orchestrator_node.py  task_plugins.py
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_common/: package.xml  setup.cfg  setup.py
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_common/arm_common/: error_codes.py  interface_compat.py  parameter_keys.py  service_names.py  topic_names.py
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_description/: CMakeLists.txt  package.xml
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_description/config/: kinematics.yaml
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_description/urdf/: arm.urdf.xacro  joints.xacro  links.xacro
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_hmi/: package.xml  setup.cfg
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_hmi/arm_hmi/: __init__.py  log_panel.py  status_panel.py  task_panel.py
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_interfaces/: CMakeLists.txt
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_interfaces/action/: PickPlaceTask.action
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_interfaces/msg/: CalibrationProfileMsg.msg  HardwareState.msg  ReadinessState.msg  Target.msg  TaskEvent.msg  TaskStatus.msg
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_motion_bridge/: package.xml
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_motion_bridge/arm_motion_bridge/: motion_bridge_node.py  planning_templates.py  stage_builder.py
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_motion_executor/: package.xml  setup.py
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_motion_executor/arm_motion_executor/: controller_adapter.py  executor.py  motion_executor_node.py
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_readiness_manager/: package.xml
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_readiness_manager/arm_readiness_manager/: contract_defs.py  readiness.py  readiness_manager_node.py
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_stm32_driver/: CMakeLists.txt
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_stm32_driver/config/: protocol.yaml  serial.yaml
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_stm32_driver/src/: frame_parser.cpp  protocol_codec.cpp
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_task_manager/: package.xml  setup.py
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_task_manager/arm_task_manager/: state_machine.py  target_registry.py  target_reservation.py  task_manager_node.py
embodied-arm-split-platformio/upper_computer/backend/embodied_arm_ws/src/arm_task_manager/resource/: arm_task_manager
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_backend_common/: package.xml
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_backend_common/arm_backend_common/: data_models.py  error_codes.py  (+5 more)
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_bringup/: package.xml
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_bt_runtime/: package.xml  setup.py
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_control_bringup/: CMakeLists.txt  package.xml
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_grasp_planner/: package.xml
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_hardware_interface/: CMakeLists.txt  package.xml
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_moveit_config/: CMakeLists.txt  package.xml
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_msgs/: CMakeLists.txt
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_perception/: package.xml
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_profiles/: package.xml  setup.py
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_sim/: package.xml  setup.py
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_stm32_driver/: package.xml
embodied-arm/upper_computer/backend/embodied_arm_ws/src/arm_vision/: package.xml
(+1073 files in other folders)
