<?xml version="1.0"?>
<package format="3">
  <name>arm_esp32_gateway</name>
  <version>0.1.0</version>
  <description>ESP32 gateway ROS package for voice and board health.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>arm_interfaces</depend>
  <depend>arm_common</depend>
  <export><build_type>ament_python</build_type></export>
</package>
