<?xml version="1.0"?>
<package format="3">
  <name>arm_hardware_interface</name>
  <version>0.1.0</version>
  <description>ros2_control hardware interface for the embodied arm.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>arm_interfaces</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_cpp</depend>
  <exec_depend>ros2_control</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
