<?xml version="1.0"?>
<package format="3">
  <name>arm_lifecycle_manager</name>
  <version>0.1.0</version>
  <description>Bringup readiness and lifecycle summary node.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>arm_common</depend>
  <depend>arm_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
