<?xml version="1.0"?>
<package format="3">
  <name>arm_motion_planner</name>
  <version>0.1.0</version>
  <description>Motion planning integration package for embodied arm runtime.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>arm_common</exec_depend>
  <exec_depend>arm_interfaces</exec_depend>
  <exec_depend>arm_backend_common</exec_depend>
  <exec_depend>arm_grasp_planner</exec_depend>
  <exec_depend>arm_scene_manager</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
