<?xml version="1.0"?>
<package format="3">
  <name>arm_common</name>
  <version>0.2.0</version>
  <description>Shared constants, interface compatibility helpers, and runtime codecs for the embodied arm stack.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>arm_backend_common</exec_depend>
  <exec_depend>arm_interfaces</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
