<?xml version="1.0"?>
<package format="3">
  <name>arm_description</name>
  <version>0.1.0</version>
  <description>Robot description assets for the embodied arm.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
