<?xml version="1.0"?>
<package format="3">
  <name>arm_motion_bridge</name>
  <version>0.1.0</version>
  <description>Deprecated compatibility package retained only for migration. New planning/execution work must use the split-stack runtime packages.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>arm_backend_common</depend>
  <depend>arm_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
