<?xml version="1.0"?>
<package format="3">
  <name>arm_bringup</name>
  <version>0.2.0</version>
  <description>Launch and configuration package.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>arm_calibration</depend>
  <depend>arm_hardware_bridge</depend>
  <depend>arm_logger</depend>
  <depend>arm_mock_tools</depend>
  <depend>arm_profiles</depend>
  <depend>arm_diagnostics</depend>
  <depend>arm_readiness_manager</depend>
  <depend>arm_safety_supervisor</depend>
  <depend>arm_camera_driver</depend>
  <depend>arm_perception</depend>
  <depend>arm_scene_manager</depend>
  <depend>arm_grasp_planner</depend>
    <depend>arm_motion_planner</depend>
  <depend>arm_motion_executor</depend>
  <depend>arm_task_orchestrator</depend>
  <depend>arm_description</depend>
  <depend>arm_moveit_config</depend>
  <depend>arm_bt_nodes</depend>
  <depend>arm_bt_runtime</depend>
  <depend>arm_hardware_interface</depend>
  <depend>arm_control_bringup</depend>
  <export><build_type>ament_python</build_type></export>
</package>
