<?xml version="1.0"?>
<package format="3">
  <name>arm_bt_runtime</name>
  <version>0.1.0</version>
  <description>Behavior-tree support package for the embodied arm runtime.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3-yaml</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
