<?xml version="1.0"?>
<package format="3">
  <name>arm_control_bringup</name>
  <version>0.1.0</version>
  <description>ros2_control bringup package for the embodied arm.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>arm_description</exec_depend>
  <exec_depend>arm_hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
