<?xml version="1.0"?>
<package format="3">
  <name>arm_perception</name>
  <version>0.2.0</version>
  <description>Perception runtime package for embodied arm.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>arm_common</depend>
  <depend>arm_interfaces</depend>
  <depend>arm_backend_common</depend>
    <export><build_type>ament_python</build_type></export>
</package>
