<?xml version="1.0"?>
<package format="3">
  <name>arm_profiles</name>
  <version>0.1.0</version>
  <description>Task and placement profile manager.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>arm_backend_common</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
