<?xml version="1.0"?>
<package format="3">
  <name>arm_sim</name>
  <version>0.2.0</version>
  <description>Simulation and fake hardware helpers.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>arm_common</depend>
  <depend>arm_interfaces</depend>
  <export><build_type>ament_python</build_type></export>
</package>
