<?xml version="1.0"?>
<package format="3">
  <name>arm_stm32_driver</name>
  <version>0.1.0</version>
  <description>STM32 serial protocol driver package.</description>
  <maintainer email="dev@example.com">OpenAI</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>arm_interfaces</depend>
  <depend>arm_common</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
